@@ -1,6 +1,7 @@
 package com.example.demo.controllers;
 
-import java.util.Map;
+import java.util.Collections;
+
 
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
@@ -13,7 +14,7 @@ public class UsersController {
 	
 	@RequestMapping(value="", method = {RequestMethod.GET})
 	public Object get() {
-		return Map.of("ben","test");
+		return Collections.singletonMap("ben", "test");
 	}
 	
 	
